# clinical-trial-pipeline

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
sql/: 001_schema.sql
src/clinical_trial_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/pipeline/: __main__.py  config.py  db.py  runs.py
src/pipeline/analytics/: queries.py
src/pipeline/ingest/: api_source.py  csv_source.py  sql_source.py
src/pipeline/load/: clinical_loader.py  staging.py
src/pipeline/transform/: api_parser.py  cleaners.py  csv_parser.py  models.py  transformer.py
tests/: samples.py  test_api_parser.py  test_cleaners.py  test_csv_parser.py  test_staging_and_routing.py
